--- a/Resitation/src/App.css
+++ b/Resitation/src/App.css
@@ -10,7 +10,7 @@
   max-width: 700px;
   height: 400px;
   justify-content: center;
-  background-color: brown;
+  background-color: rgb(180, 14, 14);
 }
 
 
